[package]
name = "nostr_mls_package"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
pretty_env_logger = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
nostr-openmls = { git = "https://github.com/water783/nostr-openmls", rev = "c8a617f35839ffc0b6bcfd091fa3955e5e653745"}
nostr-sdk = {version = "0.37", features = ["nip44"]}
lazy_static = "1.4"
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0.215"
