[package]
name = "nostr_mls_package"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
nostr-mls = { git = "https://github.com/wcat7/nostr"}
nostr-mls-sqlite-storage = { git = "https://github.com/wcat7/nostr"}
lazy_static = "1.4"
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0.215"
futures = "0.3"
regex = "1.10"
